--- a/templates/index.html
+++ b/templates/index.html
@@ -125,37 +125,37 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="media/9優惠.png"> 
+        <img src="../media/9優惠.png"> 
     </div> 
     <div class="float2"><!--漂浮小盒子2-->
-        <img src="media/logo.jpg">
+        <img src="../media/logo.jpg">
     </div> 
     <article><!--正中圖片-->
-    <img id="pic" src="media/首頁.jpg">
+    <img id="pic" src="../media/首頁.jpg">
     </article>
 
 
     <!--下方圖片-->
     <section>
-        <img src="media/小圖1.jpg" >
-        <img src="media/小圖2.jpg" >
-        <img src="media/小圖3.jpg" >
-        <img src="media/小圖6.jpg" >
-        <img src="media/小圖5.jpg" >
-        <img src="media/小圖4.jpg" >
-        <img src="media/小圖7.jpg" >
-        <img src="media/小圖8.jpg" >
-        <img src="media/小圖9.jpg" >
+        <img src="../media/小圖1.jpg" >
+        <img src="../media/小圖2.jpg" >
+        <img src="../media/小圖3.jpg" >
+        <img src="../media/小圖6.jpg" >
+        <img src="../media/小圖5.jpg" >
+        <img src="../media/小圖4.jpg" >
+        <img src="../media/小圖7.jpg" >
+        <img src="../media/小圖8.jpg" >
+        <img src="../media/小圖9.jpg" >
     </section>
 
 
 
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="media/facebook.png">
-        <img  src="media/instagram.png">
-        <img  src="media/whatsapp.png">
-        <img  src="media/youtube.png">
+        <img  src="../media/facebook.png">
+        <img  src="../media/instagram.png">
+        <img  src="../media/whatsapp.png">
+        <img  src="../media/youtube.png">
         </div>
         <div class="num">
             <span>　　</span> 
@@ -168,16 +168,16 @@
     <footer></footer>
     <!--游標-->
     
-    <img class="apple" src="media/logo.jpg">
+    <img class="apple" src="../media/logo.jpg">
     
     <!--icon-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
+    <script src="../https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
 
     <script type='text/javascript'>
 
         let pic =document.getElementById('pic')
         //創建圖片路徑
-        let picArr = ["media/首頁.jpg","media/首頁2.jpg","media/首頁3.jpg","media/首頁4.jpg","media/首頁5.jpg"]
+        let picArr = ["../media/首頁.jpg","../media/首頁2.jpg","../media/首頁3.jpg","../media/首頁4.jpg","../media/首頁5.jpg"]
         let index=0
         
             setInterval(function(){
