--- a/templates/全部商品.html
+++ b/templates/全部商品.html
@@ -23,7 +23,7 @@
     </script>
 
     <!--菜單-->
-    <script type="text/javascript" src="media/modernizr.2.5.3.min.js"></script>
+    <script type="text/javascript" src="../media/modernizr.2.5.3.min.js"></script>
 
 
     <title> 🍏 蘋果綠咖啡 ☕ </title>
@@ -103,7 +103,7 @@
 
     <!--背景-->
     <div class="img">    
-        <img class="pic" src="media/全商背景.jpg">
+        <img class="pic" src="../media/全商背景.jpg">
     </div>
 
     
@@ -121,26 +121,26 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="media/9優惠.png"> 
+        <img src="../media/9優惠.png"> 
     </div> 
     <div class="float2"><!--漂浮小盒子2-->
-        <img src="media/logo.jpg">
+        <img src="../media/logo.jpg">
     </div> 
         <article><!--菜單--> 
         <div class="flipbook-viewport">
             <div class="container">
                 <div class="flipbook">
-                    <div style="background-image:url(media/封面.jpg)"></div>
-                    <div style="background-image:url(media/1-1.jpg)"></div>
-                    <div style="background-image:url(media/1-2.jpg)"></div>
-                    <div style="background-image:url(media/2-1.jpg)"></div>
-                    <div style="background-image:url(media/2-2.jpg)"></div>
-                    <div style="background-image:url(media/3-1.jpg)"></div>
-                    <div style="background-image:url(media/3-2.jpg)"></div>
-                    <div style="background-image:url(media/4-1.jpg)"></div>
-                    <div style="background-image:url(media/4-2.jpg)"></div>
-                    <div style="background-image:url(media/5-1.jpg)"></div>
-                    <div style="background-image:url(media/5-2.jpg)"></div>
+                    <div style="background-image:url(../media/封面.jpg)"></div>
+                    <div style="background-image:url(../media/1-1.jpg)"></div>
+                    <div style="background-image:url(../media/1-2.jpg)"></div>
+                    <div style="background-image:url(../media/2-1.jpg)"></div>
+                    <div style="background-image:url(../media/2-2.jpg)"></div>
+                    <div style="background-image:url(../media/3-1.jpg)"></div>
+                    <div style="background-image:url(../media/3-2.jpg)"></div>
+                    <div style="background-image:url(../media/4-1.jpg)"></div>
+                    <div style="background-image:url(../media/4-2.jpg)"></div>
+                    <div style="background-image:url(../media/5-1.jpg)"></div>
+                    <div style="background-image:url(../media/5-2.jpg)"></div>
                 </div>
             </div>
         </div>
@@ -167,9 +167,9 @@
         
         yepnope({
             test : Modernizr.csstransforms,
-            yep: ['media/turn.js'],
-            nope: ['media/turn.html4.min.js'],
-            both: ['media/basic.css'],
+            yep: ['../media/turn.js'],
+            nope: ['../media/turn.html4.min.js'],
+            both: ['../media/basic.css'],
             complete: loadApp
         });
         
@@ -180,10 +180,10 @@
 
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="media/facebook.png">
-        <img  src="media/instagram.png">
-        <img  src="media/whatsapp.png">
-        <img  src="media/youtube.png">
+        <img  src="../media/facebook.png">
+        <img  src="../media/instagram.png">
+        <img  src="../media/whatsapp.png">
+        <img  src="../media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -194,10 +194,10 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="media/logo.jpg">
+        <img class="apple" src="../media/logo.jpg">
 
         <!--icon-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
+        <script src="../https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
 
 </body>
 </html>
