--- a/templates/客服專區.html
+++ b/templates/客服專區.html
@@ -153,15 +153,15 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="media/9優惠.png"> 
+        <img src="../media/9優惠.png"> 
     </div> 
         <div class="float2"><!--漂浮小盒子2-->
-            <img src="media/logo.jpg">
+            <img src="../media/logo.jpg">
         </div> 
         <!--背景-->
     </div> 
-    <div class="img">    
-        <img class="pic" src="media/全商背景.jpg">
+    <div class="img">
+        <img class="pic" src="../media/全商背景.jpg">
     </div>
     <article><!--中間文章-->
         <h2>客服專區</h2>
@@ -231,10 +231,10 @@
     
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="media/facebook.png">
-        <img  src="media/instagram.png">
-        <img  src="media/whatsapp.png">
-        <img  src="media/youtube.png">
+        <img  src="../media/facebook.png">
+        <img  src="../media/instagram.png">
+        <img  src="../media/whatsapp.png">
+        <img  src="../media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -245,10 +245,10 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="media/logo.jpg">
+        <img class="apple" src="../media/logo.jpg">
 
         <!--icon-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
+        <script src="../https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
 
 </body>
 </html>
