--- a/templates/最新優惠.html
+++ b/templates/最新優惠.html
@@ -115,7 +115,7 @@
     </div> 
     <!--背景-->
     <div class="img">    
-      <img class="pic" src="media/全商背景.jpg">
+      <img class="pic" src="../media/全商背景.jpg">
   </div>
 
     <header><!--目錄-->
@@ -132,15 +132,15 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="media/9優惠.png"> 
+        <img src="../media/9優惠.png"> 
     </div> 
     <div class="float2"><!--漂浮小盒子2-->
-      <img src="media/logo.jpg">
+      <img src="../media/logo.jpg">
     </div> 
     <article><!--中間-->
 
         <div class="card" style="width: 18rem;">
-            <img  src="media/開學.jpg" class="card-img-top" alt="...">
+            <img  src="../media/開學.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">你開學，我放價!</h5>
               <p class="card-text">開學季憑學生證飲品<strong>9折</strong>~</p>
@@ -148,7 +148,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="media/學府門市.png" class="card-img-top" alt="...">
+            <img src="../media/學府門市.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><strong>學府門市</strong>過年營業時間</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -156,7 +156,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="media/勝利門市.png" class="card-img-top" alt="...">
+            <img src="../media/勝利門市.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><strong>勝利門市</strong>過年營業時間</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -164,7 +164,7 @@
             </div>
           </div>    
           <div class="card" style="width: 18rem;">
-            <img src="media/黎明門市.png" class="card-img-top" alt="...">
+            <img src="../media/黎明門市.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><strong>黎明門市</strong>過年營業時間</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -172,7 +172,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="media/可頌.png" class="card-img-top" alt="...">
+            <img src="../media/可頌.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">胖可頌升級活動</h5>
               <p class="card-text"><strong>搭配湯品</strong>只要99元</p>
@@ -180,7 +180,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="media/冰檸.png" class="card-img-top" alt="...">
+            <img src="../media/冰檸.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">冰檸日</h5>
               <p class="card-text">冰檸翡翠周五<strong>第二杯半價</strong></p>
@@ -188,7 +188,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="media/芒果.jpg" class="card-img-top" alt="...">
+            <img src="../media/芒果.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">季節限定!!</h5>
               <p class="card-text">芝士芒果嘗鮮價<strong>$109</strong></p>
@@ -196,7 +196,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="media/盛開.jpg" class="card-img-top" alt="...">
+            <img src="../media/盛開.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">勝利門市歡慶開幕!</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -204,7 +204,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="media/勝營.jpg" class="card-img-top" alt="...">
+            <img src="../media/勝營.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">勝利門市試營運活動</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -216,10 +216,10 @@
 
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="media/facebook.png">
-        <img  src="media/instagram.png">
-        <img  src="media/whatsapp.png">
-        <img  src="media/youtube.png">
+        <img  src="../media/facebook.png">
+        <img  src="../media/instagram.png">
+        <img  src="../media/whatsapp.png">
+        <img  src="../media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -230,10 +230,10 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="media/logo.jpg">
+        <img class="apple" src="../media/logo.jpg">
 
         <!--icon-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
+        <script src="../https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
 
 </body>
 </html>
