--- a/templates/門市資訊.html
+++ b/templates/門市資訊.html
@@ -13,8 +13,8 @@
     <!--jquery-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>   
     <!--放大鏡-->
-	<script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-    <script src="media/jquery.elevatezoom.min.js"></script>
+	<script src="../https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+    <script src="../media/jquery.elevatezoom.min.js"></script>
 
     <script type="text/javascript" >
             $(document).ready(function()
@@ -177,51 +177,51 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="media/9優惠.png"> 
+        <img src="../media/9優惠.png"> 
     </div> 
     <div class="float2"><!--漂浮小盒子2-->
-        <img src="media/logo.jpg">
+        <img src="../media/logo.jpg">
     <!--背景-->
     </div> 
-    <div class="img">    
-        <img class="pic" src="media/全商背景.jpg">
+    <div class="img">
+        <img class="pic" src="../media/全商背景.jpg">
     </div>
     <article><!--地圖+門市資料-->
         
         <div>
             <h2 id="01"><i class="fas fa-coffee"></i> 黎明門市</h2>
-            <img  id="zoom_03" src="media/黎明店小.jpg" data-zoom-image="media/黎明店.jpg">
+            <img  id="zoom_03" src="../media/黎明店小.jpg" data-zoom-image="../media/黎明店.jpg">
             <div class="address">
-                門市名稱：黎明門市 </br>
-                <a href="tel:+886423808217"> 門市電話：04-2380-8217</a></br>
+                門市名稱：黎明門市 <br>
+                <a href="tel:+886423808217"> 門市電話：04-2380-8217</a><br>
                 <a href="https://www.google.com.tw/maps/place/%E8%98%8B%E6%9E%9C%E7%B6%A0%E5%92%96%E5%95%A1%E9%BB%8E%E6%98%8E%E9%96%80%E5%B8%82/@24.1473018,120.6335866,17z/data=!3m1!4b1!4m5!3m4!1s0x34693d150951efb1:0xa736edab01d49330!8m2!3d24.1473018!4d120.6357806?hl=zh-TW" target="_blank">
-                    門市地址：408台中市南屯區黎明路二段209號</a> </br>
-                營業時間：08:00-20:00 </br>
-                其他服務：無線網路</br>
+                    門市地址：408台中市南屯區黎明路二段209號</a> <br>
+                營業時間：08:00-20:00 <br>
+                其他服務：無線網路<br>
             </div>
         </div>
         <div>
             <h2 id="02"><i class="fas fa-coffee"></i> 學府門市</h2>
-            <img  id="zoom_02" src="media/學府店小.jpg" data-zoom-image="media/學府店.jpg">
+            <img  id="zoom_02" src="../media/學府店小.jpg" data-zoom-image="../media/學府店.jpg">
             <div class="address">
-                門市名稱：學府門市 </br>
-                <a href="tel:+886422870588">門市電話：04-2287-0588</a></br>
+                門市名稱：學府門市 <br>
+                <a href="tel:+886422870588">門市電話：04-2287-0588</a><br>
                 <a href="https://www.google.com.tw/maps/place/%E8%98%8B%E6%9E%9C%E7%B6%A0%E5%92%96%E5%95%A1%E5%AD%B8%E5%BA%9C%E9%96%80%E5%B8%82/@24.1257487,120.6730818,17z/data=!3m1!4b1!4m5!3m4!1s0x34693db49596ac43:0x85ae7d455826791c!8m2!3d24.1257487!4d120.6752758?hl=zh-TW" target="_blank">
-                    門市地址：402台中市南區學府路46號</a> </br>
-                營業時間：07:30-22:30 </br>
-                其他服務：無線網路</br>
+                    門市地址：402台中市南區學府路46號</a> <br>
+                營業時間：07:30-22:30 <br>
+                其他服務：無線網路<br>
             </div>
         </div>
         <div>
             <h2 id="03"><i class="fas fa-coffee"></i> 勝利門市</h2>
-            <img  id="zoom_01" src="media/勝利店小.jpg" data-zoom-image="media/勝利店.jpg">
+            <img  id="zoom_01" src="../media/勝利店小.jpg" data-zoom-image="../media/勝利店.jpg">
             <div class="address">
-                門市名稱：勝利門市 </br>
-                <a href="tel:+886425310309"> 門市電話：04-2531-0309</a></br>
+                門市名稱：勝利門市 <br>
+                <a href="tel:+886425310309"> 門市電話：04-2531-0309</a><br>
                 <a href="https://www.google.com.tw/maps/place/%E8%98%8B%E6%9E%9C%E7%B6%A0%E5%92%96%E5%95%A1%E5%8B%9D%E5%88%A9%E9%96%80%E5%B8%82/@24.2098394,120.698808,17z/data=!3m1!4b1!4m5!3m4!1s0x3469177a8682b85f:0x64c6930b4693ac58!8m2!3d24.2098394!4d120.701002?hl=zh-TW" target="_blank">
-                    門市地址：427台中市潭子區勝利路139號</a> </br>
-                營業時間：07:00-21:30 </br>
-                其他服務：無線網路</br>
+                    門市地址：427台中市潭子區勝利路139號</a> <br>
+                營業時間：07:00-21:30 <br>
+                其他服務：無線網路<br>
             </div>
         </div>
 
@@ -244,10 +244,10 @@
     
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="media/facebook.png">
-        <img  src="media/instagram.png">
-        <img  src="media/whatsapp.png">
-        <img  src="media/youtube.png">
+        <img  src="../media/facebook.png">
+        <img  src="../media/instagram.png">
+        <img  src="../media/whatsapp.png">
+        <img  src="../media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -258,10 +258,10 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="media/logo.jpg">
+        <img class="apple" src="../media/logo.jpg">
 
         <!--icon-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
+        <script src="../https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
 
 </body>
 </html>
